got rid of accordin

--- a/atlantis.html
+++ b/atlantis.html
@@ -76,7 +76,7 @@
 	  	<div class="page-title">Process</div>
 	  	<div class="process-overview margin-small">
 
-			<button class="accordion">Data Modeling</button>
+			<div class="subheader4">Data Modeling</div>
 			<div class="panel">
 			  <div class="text-small">
 			  	The first step was exploring and structuring the data (shown) in class. After I had a feel for the attributes I would be working with and their values, I actually began modeling out the data and picking through what was important and what wasn’t.
@@ -90,7 +90,7 @@
 			  <img class="product-pic-medium" src="pics/atlantis/data3.jpg" style="margin-right: 5%; margin-left: 2%;">
 			</div>
 
-			<button class="accordion">Wireframing</button>
+			<div class="subheader4">Wireframing</div>
 			<div class="panel">
 			  <img class="c3" src="pics/atlantis/wireframe1.jpeg">	
 			  <div class="c3-mobile">
@@ -123,10 +123,10 @@
 			  <img class="product-pic-bigger" src="pics/atlantis/color.png">
 			</div>
 
-			<button class="accordion">Why It Works</button>
+			<div class="subheader4">Why It Works</div>
 			<div class="panel">
 			  <img class="product-pic-medium" src="pics/atlantis/panel1.png" style="margin-left: 10%; margin-top: 20px">
-			  <div class="caption" style="width: 40%">
+			  <div class="caption2">
 			  	<p>1) PTF eligible flights are highlighted with a check mark.</p>
 
 				<p>2) Cancelled flights are in a separate section so the user can quickly and easily see if their flight has been cancelled rather than scanning through the enitre table to try to find it.</p>
@@ -137,7 +137,7 @@
 			  </div>
 
 			  <img class="product-pic-medium" src="pics/atlantis/panel2.png" style="margin-left: 10%; margin-top: 20px">
-			  <div class="caption" style="width: 40%">
+			  <div class="caption2">
 			  	<p>1) The timeline allows for quick and easy lookup of the next ferry, plane, and train.</p>
 
 				<p>2) The map is clear and easy to read. It oscillates between nearby islands and gives more information on each screen.</p>
@@ -148,7 +148,7 @@
 			  </div>
 
 			  <img class="product-pic-medium" src="pics/atlantis/panel3.png" style="margin-left: 10%; margin-top: 20px">
-			  <div class="caption" style="width: 40%">
+			  <div class="caption2">
 			  	<p>1) Like the first panel, table format provides easy-to-read information.</p>
 
 				<p>2) Every other row is highlighted for ease of use.</p>
