--- a/chutzpow.html
+++ b/chutzpow.html
@@ -79,13 +79,13 @@
 	  	<div class="page-title">Process</div>
 	  	<div class="process-overview">
 
-			<button class="accordion">Assessing Client Needs</button>
+			<div class="subheader4">Assessing Client Needs</div>
 			<div class="panel">
 			  <p>Before discussing any sort of solution with the client, we first focused on building a relationship with them and understanding the problems they are facing. After gaining a deep understanding of what the Holocaust Center does, we learned that Holocaust survivor stories are the most impactful and personal ways to communicate the horrors of the Holocaust. Holocaust survivor stories are important to Holocaust education because it puts a face and a real life story to the people that lived through the cruelty of the Nazi regime. Furthermore, a major problem in the contemporary Holocaust education is the aging of Holocaust survivors where they are no longer able to tell their stories and share their experiences with the world. To address this issue, the Center created Chutz-Pow, a comic book series, to tell the stories of Holocaust survivors with a younger audience in mind.</p>
 			  <p>Given the professional standard, historical accuracy and interactiveness of the series, “digitizing” this project was the perfect focus for an engaging and innovative educational platform that is unique to the Holocaust Center of Pittsburgh.</p>
 			</div>
 
-			<button class="accordion">Project Proposal</button>
+			<div class="subheader4">Project Proposal</div>
 			<div class="panel">
 			  <p>We then delivered a proposal to the client:
 			  The tool we are proposing to develop allows users to engage with the stories of the Holocaust through an interactive, online version of Chutz-Pow. It will tie together all of the resources the Holocaust Center has to offer, providing a cohesive platform for learning and engagement. This platform will showcase the unique value of Chutz-Pow and allow students from all over the world to engage with Holocaust stories on a personal level. The platform we build will provide a streamlined user experience for the staff; adding resources (images, video clips, text, etc.) and uploading comic panels from Chutz-Pow will be a quick and easy process.</p>
@@ -93,7 +93,7 @@
 			  <p>We plan to use modern web technologies to create an easy to use tool to develop responsive web pages telling the story of Holocaust Survivors through Chutz-Pow. The core principle of the application is that the data and the view are separatedso that data can easily be added to the system and without any work on the users end, a beautifully crafted experience for a reader is prepared through our adaptive technologies.</p>
 			</div>
 
-			<button class="accordion">Use Cases</button>
+			<div class="subheader4">Use Cases</div>
 			<div class="panel">
 				<p>We then developed an ambitious list of use cases; pink use cases were completed.
 				<div class="subheader3">As a student, I want to...</div>
@@ -124,7 +124,7 @@
 				</p>
 			</div>
 
-			<button class="accordion">ERD</button>
+			<div class="subheader4">ERD</div>
 			<div class="panel">
 			  <p>
 			  	Kenny took the lead on creating an Entity Relationship Diagram
@@ -132,7 +132,7 @@
 			  </p>
 			</div>
 
-			<button class="accordion">Wireframes</button>
+			<div class="subheader4">Wireframes</div>
 			<div class="panel">
 			  <div class="inner-text">
 			  	Designing the interface was a multi-step, iterative process that started with a whiteboarding session.
@@ -160,7 +160,7 @@
 			  <img src="pics/chutzpow/wireframe4.png" class="inner-image">
 			</div>
 
-			<button class="accordion">Development</button>
+			<div class="subheader4">Development</div>
 			<div class="panel">
 			  <p>We utilized the Agile development process throughout the semester to structure our work. We made use of Github issues as a product backlog and submitted weekly sprint reports to the client.</p>
 			</div>
