--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <img src="pics/left.png" id="home-background" class="left">
         <img src="pics/right.png" id="home-background" class="right">
         <div id="home-text">
-          <div id="home-text-description">Hi, my name is</div>
+          <div id="home-text-description">Hello, my name is</div>
           <div id="home-text-title">EMILY PORAT</div>
           <div id="home-text-description2">and I care about improving people’s lives with technology</div>
         </div>
@@ -158,6 +158,8 @@
       </div>
 
       <div id="contact" class="padding-large">
+        <img src="pics/left-black.png" id="footer-flower" class="left">
+        <img src="pics/right-black.png" id="footer-flower" class="right">
         <div id="contact-title">Contact</div>
         <div id="contact-text">
           I’m all set for Summer 2018, but feel free to <a href="mailto:eporat@andrew.cmu.edu" target="_top">email</a> me about full time opportunities!
