--- a/miles.html
+++ b/miles.html
@@ -57,7 +57,7 @@
 	  	<div class="page-title">Process</div>
 	  	<div class="process-overview">
 
-			<button class="accordion">User Stories</button>
+			<div class="subheader4">User Stories</div>
 			<div class="panel">
 			  <div class="c3">
 			  	<div class="h4">As an owner of a driverless car...</div>
@@ -79,7 +79,7 @@
 			  </div>
 			</div>
 
-			<button class="accordion">Competitive Analysis</button>
+			<div class="subheader4">Competitive Analysis</div>
 			<div class="panel">
 				<p>
 				We conducted research on several existing CUI platforms and summarized our findings below:
@@ -130,7 +130,7 @@
 				</p>
 			</div>
 
-			<button class="accordion">Scenarios</button>
+			<div class="subheader4">Scenarios</div>
 			<div class="panel">
 			  	<p>
 			  	We identified several different potential users, including those who own self driving vehicles and those who would be using this CUI through a ridesharing platform, as well as blind people, students, commuters, and senior citizens. Based on redundancies between use cases and personal interest, we decided to narrow our target audience to commuters who own their own vehicle.
@@ -146,7 +146,7 @@
 			  	</p>
 			</div>
 
-			<button class="accordion">Prototyping Session</button>
+			<div class="subheader4">Prototyping Session</div>
 			<div class="panel">
 			  	<div style="float: left; width: 40%; margin-right: 5%;">
 			  		<p>After completing scenarios and determining the scope of the CUI, we had a prototyping session in which I played the CUI and another classmate (not on my team) played a user. </p>
@@ -157,7 +157,7 @@
 			  	</p>
 			</div>
 
-			<button class="accordion">Revised Scenario</button>
+			<div class="subheader4">Revised Scenario</div>
 			<div class="panel">
 			  	<p>
 				We took the feedback we received from the prototyping session into account, and revised our original scenario to be more specific and address the precise features we wanted to highlight.
@@ -173,7 +173,7 @@
 			  	</p>
 			</div>
 
-			<button class="accordion">Video Planning</button>
+			<div class="subheader4">Video Planning</div>
 			<div class="panel">
 			  	<p>
 			  	The final deliverable for this project was a short product video. In planning for this, we created two conversation models, one for a user updating his or her schedule, and another for rerouting when changing a destination. This involved identifying the user utterance, the CUI response, and the characteristics of the CUI.
