--- a/upark.html
+++ b/upark.html
@@ -81,7 +81,7 @@
 	  	<div class="page-title">Process</div>
 	  	<div class="process-overview">
 
-			<button class="accordion">Personas</button>
+			<div class="subheader4">Personas</div>
 			<div class="panel">
 
 				<p>
@@ -110,7 +110,7 @@
 
 			</div>
 
-			<button class="accordion">Scenarios</button>
+			<div class="subheader4">Scenarios</div>
 			<div class="panel">
 			  	<p>
 				<b>David</b> wants to ensure the harmony of his household as well as the neighborhood. He cares about his wife and his kids’ safety, and doesn’t want to disrupt the neighbors and ruin the good relationships with them. Our website would provide a platform where security is prioritized, with possible third-party monitor or rating / report systems that ensures a safe network for people.
@@ -126,7 +126,7 @@
 			  	</p>
 			</div>
 
-			<button class="accordion">Storyboard</button>
+			<div class="subheader4">Storyboard</div>
 			<div class="panel">
 			  <p>Based on several “how might we” statements, the team created several storyboards depicting potential early features of the platform. The storyboard below illustrates a scenario in which both renters and lenders are satisfied by the security and ease of use of the app.</p>
 			  <img style="width: 80%; margin-left: 10%; margin-right: 10%" src="pics/upark/storyboard.png">
@@ -144,7 +144,7 @@
 			  </div>
 			</div>
 
-			<button class="accordion">Wireframes</button>
+			<div class="subheader4">Wireframes</div>
 			<div class="panel">
 			  <p>Building upon our wireframes, we iterated on our screen designs and added photos to bring the screens to life and look more similar to a web application. We rounded the edges of the tabs and buttons, and we organized the text on the screen to be more legible. To allow for easier and clearer navigation between pages, we added a navigation bar at the bottom of each screen to navigate between the user’s profile, reservations, calendar, and transactions.</p>
 			  <img class="product-pic-smaller" src="pics/upark/wireframe-list.png">
@@ -152,7 +152,7 @@
 			  <img class="product-pic-smaller" src="pics/upark/wireframe-book.png">
 			</div>
 
-			<button class="accordion">Mood Board and Style Guide</button>
+			<div class="subheader4">Mood Board and Style Guide</div>
 			<div class="panel">
 			  <p>After creating greyscale prototypes, the team put together a mood board to capture the feelings we wanted to elicit from the user. We wanted to achieve a calm, secure, and orderly theme. The style guide takes elements of the mood board to provide a cohesive style throughout the app.</p>
 			  <img class="product-pic-medium" src="pics/upark/mood.jpg" style="margin-left: 5%">
