centered home in mobile nav and fixed contact

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <meta name="viewport" content="width=device-width">
       <div id="my-nav" class="nav-colored">
         <div class="nav-logo" onclick="slideToSection('home')">EP</div>    
-        <div class="nav-item" onclick="slideToSection('home')">HOME</div>
+        <div class="nav-item" id="home-nav-item"  onclick="slideToSection('home')">HOME</div>
         <div class="nav-item" onclick="slideToSection('about')">ABOUT</div>
         <div class="nav-item" onclick="slideToSection('projects-title')">PROJECTS</div>
         <div class="nav-item" onclick="slideToSection('contact')">CONTACT</div>
